--- a/services.html
+++ b/services.html
@@ -252,7 +252,7 @@
           </div>
 
           <div class="menu-item">
-            <img src="charlotte.jpg" alt="Pizza Margherita" width="280" height="200">
+            <img src="Charlotte.jpg" alt="Pizza Margherita" width="280" height="200">
             <div class="menu-item-info">
               <h3>Pizza Charlotte</h3>
               <p>Tomate, fromage, chèvre, gorgonzola, reblochons, olives</p>
@@ -288,7 +288,7 @@
           </div>
           
           <div class="menu-item">
-            <img src="new jersey.jpg" alt="Pizza Margherita" width="280" height="200">
+            <img src="New Jersey.jpg" alt="Pizza Margherita" width="280" height="200">
             <div class="menu-item-info">
               <h3>Pizza New Jersey</h3>
               <p>Tomate, fromage, Poulet Tikka, P. de terre, poivrons</p>
@@ -297,7 +297,7 @@
           </div>
 
           <div class="menu-item">
-            <img src="dallas.jpg" alt="Pizza Margherita" width="280" height="200">
+            <img src="Dallas.jpg" alt="Pizza Margherita" width="280" height="200">
             <div class="menu-item-info">
               <h3>Pizza Dallas</h3>
               <p>Crème fraiche, fromage, Poulet Tikka, boursin</p>
