--- a/services.html
+++ b/services.html
@@ -288,7 +288,7 @@
           </div>
           
           <div class="menu-item">
-            <img src="New Jersey.jpg" alt="Pizza Margherita" width="280" height="200">
+            <img src="New jersey.jpg" alt="Pizza Margherita" width="280" height="200">
             <div class="menu-item-info">
               <h3>Pizza New Jersey</h3>
               <p>Tomate, fromage, Poulet Tikka, P. de terre, poivrons</p>
@@ -315,7 +315,7 @@
           </div>
 
           <div class="menu-item">
-            <img src="denver.jpg" alt="Pizza Margherita" width="280" height="200">
+            <img src="Denver.jpg" alt="Pizza Margherita" width="280" height="200">
             <div class="menu-item-info">
               <h3>Pizza Denver</h3>
               <p>Crème fraiche, fromage, Poulet fumé, P. de terre</p>
@@ -333,7 +333,7 @@
           </div>
 
           <div class="menu-item">
-            <img src="portland.jpg" alt="Pizza Margherita" width="280" height="200">
+            <img src="Portland.jpg" alt="Pizza Margherita" width="280" height="200">
             <div class="menu-item-info">
               <h3>Pizza Portland</h3>
               <p>Crème fraiche, fromage, Chorizo, Poulet fumé</p>
