--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     </div>
                 </div>
                 <div class="product-item animated-element">
-                    <img src="pizza charlotte.jpeg" alt="Pizza au poulet" width="300" height="200">
+                    <img src="Charlotte.jpg" alt="Pizza au poulet" width="300" height="200">
                     <div class="product-info">
                         <h4>Pizza Charlotte</h4>
                         <p>Notre spécialité : une pizza au différente saveurs laitières du monde</p>
@@ -131,14 +131,14 @@
         
     
         <section class="section animated-element">
-            <h3>Découvrez Notre Menu Complet</h3>
-            <p>Explorez notre menu varié, mettant en vedette nos spécialités de pizzas ainsi que d'autres délices culinaires. Nous proposons également des options végétariennes et des plats pour tous les goûts.</p>
+          <h3>Découvrez Notre Menu Complet</h3>
+<p>Explorez notre carte, où chaque plat est un tir gagnant ! Retrouvez nos pizzas marquantes, nos burgers à dunker, et nos crêpes (sucrées et salées) qui assurent un véritable match de saveurs. Avec nos options végétariennes et nos choix variés, on marque des points pour tous les goûts !</p>
             <a href="services.html" class="btn-menu">Voir le menu complet</a>
         </section>
 
         <section class="section animated-element">
             <h3>À Propos de ALL Star Paris 11</h3>
-            <p>Découvrez l'histoire passionnante de Chicken Pizza Asnières, notre philosophie culinaire et notre engagement envers la qualité.</p>
+<p>Découvrez l'histoire passionnante de All Star Paris 11, notre philosophie culinaire inspirée du basketball, et notre engagement à offrir des plats de qualité qui marquent à chaque bouchée.</p>
             <a href="apropos.html" class="btn-menu">En savoir plus sur nous</a>
         </section>
 
