--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ALL Strar - Fastfood Paris 11</title>
+    <title>ALL Star - Fastfood Paris 10</title>
     <meta name="description" content="Découvrez l'histoire de Chicken Pizza Asnières, notre passion pour la cuisine italienne et notre engagement à offrir les meilleures pizzas à Asnières-sur-Seine.">
-    <meta name="keywords" content="Chicken Pizza, pizza Asnières, restaurant Asnières, cuisine italienne, pizzas, plats à emporter">
+    <meta name="keywords" content="All star, pizza Paris 10, restaurant parisien, cuisine italienne, pizzas, plats à emporter">
     <meta name="robots" content="index, follow">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/png" href="logo chiken pizza.png">
+    <link rel="icon" type="image/png" href="logo all star noir.png">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <meta property="og:title" content="À Propos - Chicken Pizza Asnières">
-    <meta property="og:description" content="Découvrez l'histoire de Chicken Pizza Asnières et notre passion pour les pizzas de qualité à Asnières-sur-Seine.">
+    <meta property="og:title" content="À Propos - All star">
+    <meta property="og:description" content="Découvrez l'histoire de All star et notre passion pour les pizzas de qualité à Paris">
     <meta property="og:image" content="URL_de_votre_image_partagée">
     <meta property="og:url" content="https://www.pizza-asnieres.com/">
     <meta property="og:type" content="website">
@@ -21,7 +21,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/png" href="logo chiken pizza.png">
+    <link rel="icon" type="image/png" href="logo all star noir.png">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
