--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ALL Star - Fastfood Paris 10</title>
-    <meta name="description" content="Découvrez l'histoire de Chicken Pizza Asnières, notre passion pour la cuisine italienne et notre engagement à offrir les meilleures pizzas à Asnières-sur-Seine.">
+    <meta name="description" content="Découvrez l'histoire de All star, notre passion pour la cuisine italienne et notre engagement à offrir les meilleures pizzas à paris.">
     <meta name="keywords" content="All star, pizza Paris 10, restaurant parisien, cuisine italienne, pizzas, plats à emporter">
     <meta name="robots" content="index, follow">
     <link rel="stylesheet" href="style.css">
