--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta property="og:url" content="https://www.pizza-asnieres.com/">
     <meta property="og:type" content="website">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/png" href="logo chiken pizza.png">
+    <link rel="icon" type="image/png" href="logo all star noir.png">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="style.css">
