--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta property="og:title" content="À Propos - All star">
     <meta property="og:description" content="Découvrez l'histoire de All star et notre passion pour les pizzas de qualité à Paris">
     <meta property="og:image" content="URL_de_votre_image_partagée">
-    <meta property="og:url" content="https://www.pizza-asnieres.com/">
+    <meta property="og:url" content="https://www.pizza-paris.com/">
     <meta property="og:type" content="website">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="logo all star noir.png">
