--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
                     <div class="carousel-caption">
                     </div>
                     <div class="carousel-frame">
-                        <h1>Qualité et Saveurs</h1>
-                        <p>Dégustez nos délicieuses pizzas, cuites à la perfection !</p>
+                        <h1>Faites un Slam Dunk de Saveurs !🏀</h1>
+                        <p>Nos pizzas sont le « MVP » du goût, prêtes pour un alley-oop dans votre assiette ! 🍕</p>
                     </div>
                     <a href="services.html" class="carousel-link">Voir notre menu</a>
                 </div>
@@ -69,8 +69,8 @@
                     <div class="carousel-caption">
                     </div>
                     <div class="carousel-frame">
-                        <h1>Un Lieu Convivial</h1>
-                        Profitez d'une ambiance chaleureuse pour un moment agréable entre amis ou en famille
+                        <h1>Un Terrain Convivial</h1>
+                         <p>Profitez d'une ambiance chaleureuse pour un moment agréable entre amis ou en famille <p>
                     </div>
                     <a href="apropos.html" class="carousel-link">En savoir plus</a>
                 </div>
@@ -80,7 +80,7 @@
                     </div>
                     <div class="carousel-frame">
                         <h1>Faites par des Passionnés</h1>
-                        Découvrez nos pizzas préparées avec amour et des ingrédients frais
+                         <p>Découvrez nos pizzas préparées avec amour et des ingrédients frais <p>
                     </div>
                     <a href="contact.html" class="carousel-link">Nous contacter</a>
                 </div>
@@ -90,7 +90,7 @@
         </div>
 
         <div class="slogan animated-element">
-            "L'art de la pizza, une expérience gustative inoubliable"
+            "L'art de la pizza, une expérience qui marque à chaque bouchée ! 🍕⛹️‍♂️"
         </div>
 
         <div class="social-links animated-element">
@@ -106,7 +106,7 @@
                     <img src="marguerita.jpg" alt="Pizza classique" width="300" height="200">
                     <div class="product-info">
                         <h4>Pizza Philadelphia</h4>
-                        <p>Une pizza traditionnelle avec une sauce tomate fraîche et du fromage fondant et notre meilleur selection d'origan frais.</p>
+                        <p>Un goût qui « dribble » entre tradition et saveur avec une sauce tomate et un fromage fondant. 🏀🏆</p>
                         <a href="services.html" class="btn-menu">Voir le menu</a>
                     </div>
                 </div>
@@ -114,7 +114,7 @@
                     <img src="bugerrr.jpg"Pizza végétarienne" width="300" height="200">
                     <div class="product-info">
                         <h4>Menu Big Four Burger</h4>
-                        <p>. Son goût prononcé va de pair avec la viande assaisonnée de basilic, de persil et d'origan.</p>
+                        <p>Un burger qui marque le terrain avec des saveurs assaisonnées, un vrai game-changer ! 🍔🏀</p>
                         <a href="services.html" class="btn-menu">Voir le menu</a>
                     </div>
                 </div>
@@ -122,7 +122,7 @@
                     <img src="Charlotte.jpg" alt="Pizza au poulet" width="300" height="200">
                     <div class="product-info">
                         <h4>Pizza Charlotte</h4>
-                        <p>Notre spécialité : une pizza au différente saveurs laitières du monde</p>
+                        <p>Notre spécialité : une pizza au différente saveurs laitières du monde🍕🏀</p>
                         <a href="services.html" class="btn-menu">Voir le menu</a>
                     </div>
                 </div>
