--- a/index.html
+++ b/index.html
@@ -131,14 +131,14 @@
         
     
         <section class="section animated-element">
-          <h3>Découvrez Notre Menu Complet</h3>
-<p>Explorez notre carte, où chaque plat est un tir gagnant ! Retrouvez nos pizzas marquantes, nos burgers à dunker, et nos crêpes (sucrées et salées) qui assurent un véritable match de saveurs. Avec nos options végétariennes et nos choix variés, on marque des points pour tous les goûts !</p>
+          <h3>Découvrez Notre Menu Complet🏀</h3>
+<p>Explorez notre carte, où chaque plat est un tir gagnant ! Retrouvez nos pizzas marquantes, nos burgers à dunker, et nos crêpes (sucrées et salées) qui assurent un véritable match de saveurs. Avec nos options végétariennes et nos choix variés, on marque des points pour tous les goûts !🍔</p>
             <a href="services.html" class="btn-menu">Voir le menu complet</a>
         </section>
 
         <section class="section animated-element">
-            <h3>À Propos de ALL Star Paris 11</h3>
-<p>Découvrez l'histoire passionnante de All Star Paris 11, notre philosophie culinaire inspirée du basketball, et notre engagement à offrir des plats de qualité qui marquent à chaque bouchée.</p>
+            <h3>À Propos de ALL Star Paris 11🏀</h3>
+<p>Découvrez l'histoire passionnante de All Star Paris 11, notre philosophie culinaire inspirée du basketball, et notre engagement à offrir des plats de qualité qui marquent à chaque bouchée.🏀🏆</p>
             <a href="apropos.html" class="btn-menu">En savoir plus sur nous</a>
         </section>
 
