--- a/apropos.html
+++ b/apropos.html
@@ -47,93 +47,94 @@
   </head>
 
     <main class="main">
-        <h1>À Propos de All Star Paris X</h1>
-        
-        <section class="about-section">
-            <img src="devanture.jpg" alt="Extérieur du restaurant All StarAsnières" class="about-image" width="800" height="300">
-            <h2>Notre Histoire</h2>
-            <p>Ouvert en 2019, All Star Paris 10 a été fondé pour offrir une expérience culinaire unique à la communauté d'Asnières-sur-Seine. En s'inspirant des saveurs méditerranéennes et de la passion pour le poulet braisé, nous avons créé un espace où les clients peuvent déguster des plats authentiques, préparés avec soin et amour.</p>
-        </section>
+       <h1>🏀 À Propos de All Star Paris X 🏆</h1>
 
-        <section class="about-section">
-            <img src="cuisine.webp" alt="Notre chef en train de préparer un poulet braisé à Asnières" class="about-image" width="800" height="300">
-            <h2>Notre Cuisine</h2>
-            <p>Chez All Star Paris 10, nous mettons un point d'honneur à utiliser des ingrédients frais et de qualité supérieure. Notre spécialité, le poulet braisé, est mariné pendant 24 heures dans un mélange d'épices secrètes, puis cuit lentement pour en extraire toutes les saveurs. Nous proposons également une gamme de plats méditerranéens, incluant des couscous, des burgers gourmets et bien plus encore, tous préparés avec la même rigueur.</p>
-        </section>
+<section class="about-section">
+    <img src="devanture.jpg" alt="Extérieur du restaurant All StarAsnières" class="about-image" width="800" height="300">
+    <h2>Notre Histoire</h2>
+    <p>Ouvert en 2019, All Star Paris 10 a lancé sa saison avec un objectif : marquer les esprits et les papilles d'Asnières-sur-Seine. Inspirés par les saveurs méditerranéennes et notre passion pour le poulet braisé, on vous propose un *shoot gagnant* d’authenticité à chaque bouchée ! 🏅</p>
+</section>
 
-        <section class="about-section">
-            <img src="chaleureux.jpg" alt="Intérieur chaleureux du restaurant All StarAsnières" class="about-image" width="800" height="300">
-            <h2>Notre Ambiance</h2>
-            <p>Notre restaurant à Paris 10 est conçu pour offrir une ambiance chaleureuse et accueillante, idéale pour des repas en famille, des sorties entre amis ou des dîners d'affaires. Avec un décor élégant aux influences méditerranéennes et un service attentif, nous nous efforçons de rendre chaque visite mémorable.</p>
-        </section>
+<section class="about-section">
+    <img src="cuisine.webp" alt="Notre chef en train de préparer un poulet braisé à Asnières" class="about-image" width="800" height="300">
+    <h2>Notre Cuisine</h2>
+    <p>Chez All Star Paris 10, on joue dans la cour des grands ! Nos ingrédients frais et premium sont les véritables stars du jeu. 🏀 Notre poulet braisé, mariné 24 heures, est notre « MVP » — chaque bouchée est un slam dunk de saveurs ! 💯</p>
+</section>
 
-        <section class="about-section">
-            <img src="enga.webp" alt="Événement communautaire à All StarAsnières" class="about-image" width="800" height="300">
-            <h2>Notre Engagement Communautaire</h2>
-            <p>Chez All Star, nous sommes profondément engagés envers notre communauté locale. Nous participons régulièrement à des événements locaux, soutenons les initiatives caritatives de la région et nous efforçons de réduire notre empreinte environnementale en utilisant des emballages écologiques et en privilégiant les fournisseurs locaux.</p>
-        </section>
+<section class="about-section">
+    <img src="chaleureux.jpg" alt="Intérieur chaleureux du restaurant All StarAsnières" class="about-image" width="800" height="300">
+    <h2>Notre Ambiance</h2>
+    <p>Ambiance conviviale et atmosphère de *terrain* pour tous nos fans ! Que ce soit pour un *time-out* en famille ou un dîner entre amis, notre restaurant offre un cadre accueillant qui vous met dans le jeu dès votre entrée. 👟🌟</p>
+</section>
 
-        <section class="about-section">
-            <h2>Nos Valeurs</h2>
-            <div class="values">
-                <div class="value">
-                    <div class="value-icon"><i class="fas fa-heart"></i></div>
-                    <h3>Passion</h3>
-                    <p>Notre passion pour la cuisine authentique et les saveurs uniques est au cœur de tout ce que nous faisons, de la préparation des plats à l'accueil de nos clients.</p>
-                </div>
-                <div class="value">
-                    <div class="value-icon"><i class="fas fa-leaf"></i></div>
-                    <h3>Qualité</h3>
-                    <p>Nous nous engageons à n'utiliser que des ingrédients frais et de la plus haute qualité pour garantir une expérience gustative exceptionnelle à chaque visite.</p>
-                </div>
-                <div class="value">
-                    <div class="value-icon"><i class="fas fa-users"></i></div>
-                    <h3>Communauté</h3>
-                    <p>Nous croyons en l'importance de créer des liens forts avec notre communauté locale, en soutenant les initiatives locales et en offrant un lieu de rassemblement chaleureux.</p>
-                </div>
-            </div>
-        </section>
+<section class="about-section">
+    <img src="enga.webp" alt="Événement communautaire à All StarAsnières" class="about-image" width="800" height="300">
+    <h2>Notre Engagement Communautaire</h2>
+    <p>All Star joue collectif ! 💪 En tant que membre actif de notre communauté locale, nous participons à des événements et soutenons les initiatives locales. Nous faisons également un « shoot écolo » en réduisant notre empreinte avec des emballages respectueux de l’environnement. 🌍💚</p>
+</section>
 
-        
-      <section  class="animate-slide">Notre histoire</h2>
-      <div class="timeline">
+<section class="about-section">
+    <h2>Nos Valeurs</h2>
+    <div class="values">
+        <div class="value">
+            <div class="value-icon"><i class="fas fa-heart"></i></div>
+            <h3>Passion</h3>
+            <p>Nous mettons notre cœur sur le *terrain* pour chaque plat que nous servons. Notre passion pour la cuisine fait vibrer le *filet* ! ❤️</p>
+        </div>
+        <div class="value">
+            <div class="value-icon"><i class="fas fa-leaf"></i></div>
+            <h3>Qualité</h3>
+            <p>À chaque match, on vise la *perfection*. Seuls les meilleurs ingrédients gagnent leur place dans notre *équipe* de saveurs ! 🥇</p>
+        </div>
+        <div class="value">
+            <div class="value-icon"><i class="fas fa-users"></i></div>
+            <h3>Communauté</h3>
+            <p>All Star, c’est aussi jouer pour l'équipe locale ! On soutient notre *roster* et on apporte notre énergie à chaque événement. 🤝</p>
+        </div>
+    </div>
+</section>
+
+<section class="animate-slide">Notre Histoire</h2>
+    <div class="timeline">
         <div class="timeline-item left animate-slide">
-          <div class="timeline-content">
-            <h3>2019</h3>
-            <p>Ouverture de All Star Paris 10 avec la volonté de proposer une expérience culinaire unique axée sur le poulet braisé et les saveurs méditerranéennes. Le restaurant a rapidement gagné en popularité grâce à son ambiance chaleureuse et ses plats authentiques.</p>
-          </div>
-      </div>
-      <div class="timeline-item right animate-slide">
-          <div class="timeline-content">
-              <h3>2020</h3>
-              <p>Introduction d'un service de livraison en ligne pour répondre à la demande croissante des clients souhaitant profiter de nos plats depuis chez eux, notamment pendant les périodes de confinement.</p>
-          </div>
-      </div>
-      <div class="timeline-item left animate-slide">
-          <div class="timeline-content">
-              <h3>2021</h3>
-              <p>Développement d'un nouveau menu avec des options végétariennes et véganes, répondant ainsi aux attentes diversifiées de notre clientèle tout en restant fidèle à notre philosophie de qualité.</p>
-          </div>
-      </div>
-      <div class="timeline-item right animate-slide">
-          <div class="timeline-content">
-              <h3>2022</h3>
-              <p>Création d'une section "Événements et Catering" permettant d'organiser des événements privés et professionnels, ainsi que des services de restauration pour des occasions spéciales.</p>
-          </div>
-      </div>
-      <div class="timeline-item left animate-slide">
-          <div class="timeline-content">
-              <h3>2023</h3>
-              <p>Réouverture après une rénovation majeure, offrant un espace plus moderne tout en préservant l'atmosphère chaleureuse qui fait notre réputation. L'occasion d'introduire de nouvelles recettes et de moderniser le décor.</p>
-          </div>
-      </div>
-      <div class="timeline-item right animate-slide">
-          <div class="timeline-content">
-              <h3>2024</h3>
-              <p>Lancement de notre siteweb mobile pour faciliter les commandes, les paiements, et offrir des promotions exclusives à nos clients les plus fidèles.</p>
-          </div>
-      </div>
-  </section>
+            <div class="timeline-content">
+                <h3>2019</h3>
+                <p>Ouverture de All Star Paris 10 : le premier match ! 🏀 Objectif : créer une expérience culinaire unique axée sur le poulet braisé et les saveurs méditerranéennes.</p>
+            </div>
+        </div>
+        <div class="timeline-item right animate-slide">
+            <div class="timeline-content">
+                <h3>2020</h3>
+                <p>On passe à l’offensive avec notre service de livraison en ligne, pour que nos fans puissent savourer nos plats depuis chez eux, même en période de *timeout* ! 🏠</p>
+            </div>
+        </div>
+        <div class="timeline-item left animate-slide">
+            <div class="timeline-content">
+                <h3>2021</h3>
+                <p>On diversifie notre stratégie de jeu avec des options végétariennes et véganes, s’assurant que chacun puisse jouer le *match* de la qualité avec nous. 🥬</p>
+            </div>
+        </div>
+        <div class="timeline-item right animate-slide">
+            <div class="timeline-content">
+                <h3>2022</h3>
+                <p>On lance la section « Événements et Catering » pour répondre aux besoins de notre équipe étendue, sur le *terrain* et en dehors ! 🎉</p>
+            </div>
+        </div>
+        <div class="timeline-item left animate-slide">
+            <div class="timeline-content">
+                <h3>2023</h3>
+                <p>On revient en force après une rénovation complète pour un terrain plus moderne, tout en préservant l’esprit chaleureux du *vestiaire*. 🏆</p>
+            </div>
+        </div>
+        <div class="timeline-item right animate-slide">
+            <div class="timeline-content">
+                <h3>2024</h3>
+                <p>Lancement de notre site mobile pour des commandes rapides, des scores en temps réel, et des promotions exclusives. Les All Stars ne sont qu’à un *clic* ! 📲</p>
+            </div>
+        </div>
+    </div>
+</section>
+
   
 
    
