--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
                     <div class="carousel-caption">
                     </div>
                     <div class="carousel-frame">
-                        <h1>Un Terrain Convivial</h1>
-                         <p>Profitez d'une ambiance chaleureuse pour un moment agréable entre amis ou en famille <p>
+                        <h1>Un Terrain Convivial🏀</h1>
+                         <p>Profitez d'une ambiance chaleureuse pour un moment agréable entre amis ou en famille ⛹️‍♂️<p>
                     </div>
                     <a href="apropos.html" class="carousel-link">En savoir plus</a>
                 </div>
@@ -79,8 +79,8 @@
                     <div class="carousel-caption">
                     </div>
                     <div class="carousel-frame">
-                        <h1>Faites par des Passionnés</h1>
-                         <p>Découvrez nos pizzas préparées avec amour et des ingrédients frais <p>
+                        <h1>Faites par des Passionnés 🏀</h1>
+                         <p>Découvrez nos pizzas préparées avec amour et des ingrédients frais ❤️<p>
                     </div>
                     <a href="contact.html" class="carousel-link">Nous contacter</a>
                 </div>
